--- a/backend/package.json
+++ b/backend/package.json
@@ -16,13 +16,13 @@
     "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
-    "express": "^4.21.0"
-  },
-  "devDependencies": {
+    "express": "^4.21.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.10.2",
-    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2"
   }
 }
