--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
+    "start": "node --max-old-space-size=512 dist/index.js",
+    "dev": "ts-node --max-old-space-size=512 src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": ["figma", "api", "express", "typescript"],
