--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     plan: free
     buildCommand: cd backend && npm install && npm run build
-    startCommand: cd backend && npm start
+    startCommand: cd backend && node --max-old-space-size=512 --expose-gc dist/index.js
     envVars:
       - key: NODE_ENV
         value: production
